@@ -4123,8 +4123,13 @@ If NEWSGROUP is nil, return the global kill file name instead."
   (or gnus-override-method
       (and (not group)
 	   gnus-select-method)
-      (and (not (gnus-group-entry group)) ;; a new group
-	   (gnus-group-name-to-method group))
+      (and (not (gnus-group-entry group))
+ 	   ;; Killed or otherwise unknown group.
+ 	   (or
+ 	    ;; If we know a virtual server by that name, return its method.
+ 	    (gnus-server-to-method (gnus-group-server group))
+ 	    ;; Guess a new method as last resort.
+ 	    (gnus-group-name-to-method group)))
       (let ((info (or info (gnus-get-info group)))
 	    method)
 	(if (or (not info)
